<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.sergiobt.lab1calc.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:cursorVisible="true"
                android:id="@+id/eOperaciones"
                android:textSize="28dp"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <!--Inicio LinearL 1-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <Button
                    android:id="@+id/bSiete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:text="@string/siete"
                    android:textAllCaps="false"
                    android:textSize="30sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <Button
                    android:id="@+id/bOcho"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/ocho"
                    android:textAllCaps="false"
                    android:textSize="30sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <Button
                    android:id="@+id/bNueve"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nueve"
                    android:textAllCaps="false"
                    android:textSize="30sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <Button
                    android:id="@+id/bMas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/mas"
                    android:textAllCaps="false"
                    android:textSize="30sp" />

            </LinearLayout>
            <!--Fin linearL 1-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <!--Inicio LinearL 2-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <Button
                    android:id="@+id/bCuatro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cuatro"
                    android:textAllCaps="false"
                    android:textSize="30sp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <Button
                    android:id="@+id/bCinco"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cinco"
                    android:textAllCaps="false"
                    android:textSize="30sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <Button
                    android:id="@+id/bSeis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/seis"
                    android:textAllCaps="false"
                    android:textSize="30sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <Button
                    android:id="@+id/bMenos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/resta"
                    android:textAllCaps="false"
                    android:textSize="30sp" />

            </LinearLayout>

            <!--Fin LinearL 2-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <!--Inicio LinearL3            -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <Button
                    android:id="@+id/bUno"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/uno"
                    android:textAllCaps="false"
                    android:textSize="30sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <Button
                    android:id="@+id/bDos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dos"
                    android:textAllCaps="false"
                    android:textSize="30sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <Button
                    android:id="@+id/bTres"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tres"
                    android:textAllCaps="false"
                    android:textSize="30sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <Button
                    android:id="@+id/bDivision"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/division"
                    android:textAllCaps="false"
                    android:textSize="30sp" />

            </LinearLayout>
            <!--Fin Linear L3-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <!--Inicio LinearL4            -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <Button
                    android:id="@+id/bPunto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/punto"
                    android:textAllCaps="false"
                    android:textSize="30sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <Button
                    android:id="@+id/bCero"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cero"
                    android:textAllCaps="false"
                    android:textSize="30sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <Button
                    android:id="@+id/bIgual"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/igual"
                    android:textAllCaps="false"
                    android:textSize="30sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <Button
                    android:id="@+id/bMulti"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/mult"
                    android:textAllCaps="false"
                    android:textSize="30sp" />


            </LinearLayout>
            <!--Fin Linear L 4-->
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:id="@+id/bLimpiar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/limpiar"
                android:textAllCaps="false"
                android:textSize="30sp" />
        </LinearLayout>



    </LinearLayout>

</LinearLayout>
